--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,11 +1,15 @@
 body {
   text-align: center;
-  font-family: 'Open Sans', sans-serif;
-  color: #3f4850;
+  font-family: italic;
+  color: purple;
+  background-color: #b2f6b0;
+
+  ;
 }
 
+
 h2 {
-  font-size: 2em;
+  font-size: 3em;
   margin: 52px 0 40px;
   text-transform: capitalize;
 }
@@ -27,7 +31,7 @@ a {
 
 .search-form button {
   outline: none;
-  background-color: #438bbd;
+  background-color: #034614;
   border: none;
   padding: 0px 15px;
   border-radius: 0 0.35em 0.35em 0;
@@ -52,7 +56,7 @@ input {
 
 .main-nav a {
   display: block;
-  background: #438bbd;
+  background: #965be2;
   border-radius: 3px;
   padding: 5px;
   color: #fff;
@@ -61,7 +65,7 @@ input {
 .main-nav .active,
 .main-nav a:hover,
 .search-form button:hover {
-  background-color: #275270;
+  background-color: #2d1152;
 }
 
 .photo-container ul {
@@ -77,6 +81,11 @@ input {
   height: 165px;
   overflow: hidden;
   margin-bottom: 15px;
+  box-shadow: 10px 10px 5px gray;
+  float: left;
+  transform: rotate(-7deg);
+
+
 }
 
 .photo-container ul img {
@@ -87,13 +96,14 @@ input {
 
 .photo-container li:hover img {
   transform: scale(1.65);
+  transform: rotate(10deg);
 }
 
 .photo-container .not-found {
   width: 100%;
 }
 
-@media only screen and (max-width: 767px)  {
+@media only screen and (max-width: 767px) {
   body {
     padding-top: 2em;
   }
@@ -103,7 +113,7 @@ input {
   }
 }
 
-@media only screen and (min-width: 768px)  {
+@media only screen and (min-width: 768px) {
   body {
     padding-top: 4em;
   }
@@ -117,7 +127,7 @@ input {
     display: flex;
     justify-content: center;
   }
-  
+
   .main-nav li {
     margin: 10px;
     width: 100px;
